# src/main/java/pl/codeconscept/e2d/e2d_masterdata/database/entity/SchoolEntity.java
@@ -1,17 +1,18 @@
 package pl.codeconscept.e2d.e2d_masterdata.database.entity;
 
+import lombok.Data;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 
 import javax.persistence.*;
 
-@Getter
-@Setter
-@NoArgsConstructor
+@Data
 @Entity
 @Table(name = "school")
 public class SchoolEntity {
+
+
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
@@ -20,8 +21,4 @@ public class SchoolEntity {
     @Column(name = "official_name")
     private String officialName;
 
-    public SchoolEntity(String name, String officialName) {
-        this.name = name;
-        this.officialName = officialName;
-    }
 }
