# src/main/java/pl/codeconscept/e2d/e2d_masterdata/dto/Car.java
@@ -1,14 +1,0 @@
-package pl.codeconscept.e2d.e2d_masterdata.dto;
-
-
-import lombok.Data;
-
-@Data
-public class Car {
-
-    private Long schoolId;
-    private String model;
-    private String brand;
-    private String registrationNumber;
-
-}
