# src/main/java/pl/codeconscept/e2d/e2d_masterdata/dto/School.java
@@ -1,10 +1,0 @@
-package pl.codeconscept.e2d.e2d_masterdata.dto;
-import lombok.Data;
-
-@Data
-public class School {
-
-    private String name;
-    private String officialName;
-
-}
